- Diff integration: limit the number of additional queries for noderef/userref.
- Diff integration: refactored around a new hook_content_diff_values() to save contrib field modules the
burden of implementing hook_diff. For most field types, the default content_field_content_diff_values()
should be enough, though.

CCK 6.x-2.1
===========

This release fixes two critical issues:
- #331293 by Timo.Kissing - Content copy: no fields proposed for export (#320632 followup).
- #331033 Views integration: Fix fatal error in content_handler_field.inc in some circumstances.

Other fixes:
- #331179 Userreference: 'reverse link' checkbox stayed unchecked.
- Uninstall forgot to remove some variables.
- #331794 Fix false positives for "The default value is invalid" error message.
- #331995 Fix 'invalid argument for foreach' warning on nodes with inexistent type.
- Views integration: make sure our own render_link doesn't output empty links (see #332679).

CCK 6.x-2.0
===========

IMPORTANT : this release fixes (minor) cross-site scripting (XSS) vulnerabilities
in nodereference.module, userreference.module, content_copy.module, and CCK's Views integration
See the Security Annoucement on http://drupal.org/node/330546 for more information.

Note: Filters available for CCK fields in Views have changed slightly since the RC releases.
If upgrading from a RC release, you might need to check your views, and if needed.
This only applies to filters defined on Text or Number fields that specify a list of 'Allowed values'.
Filters on other CCK fields are not affected.

Main new features since RC10:
- #300368 Add option on Display fields screen to omit fields or groups from the $content value passed to the node template.
- #298651 by smk-ka, yched - Nodereference/Userreference: Enhance performance on large sites.
  This also adds 'autocomplete mode' widget settings (full string / beginning of string).