@@ -13,6 +13,7 @@ CCK 6.x-2.x
 - Diff integration: refactored around a new hook_content_diff_values() to save contrib field modules the
 burden of implementing hook_diff. For most field types, the default content_field_content_diff_values()
 should be enough, though.
+- #344216 by dbabbage: Fix incorrect url to Schema module in tests descriptions.
 
 CCK 6.x-2.1
 ===========
